--- a/GhasreMobile/Views/Home/Contact.cshtml
+++ b/GhasreMobile/Views/Home/Contact.cshtml
@@ -9,8 +9,7 @@
     <link href="~/css/pages/index.min.css" rel="stylesheet" />
 
 }
-<div class="mat-card">
-   
+<div class="mat-card uk-margin-small-bottom">
     @await Component.InvokeAsync("TamasBaMaInContactView")
 </div>
 <div class="main-contact">
