--- a/GhasreMobile/Areas/Admin/Views/Ad/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ad/Index.cshtml
@@ -70,5 +70,11 @@
             });
         }
 
+        function Delete(id) {
+            $.post("/Admin/Ad/Delete/" + id, function () {
+                window.location.reload();
+            });
+        }
+
     </script>
 }
