--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Create.cshtml
@@ -24,7 +24,7 @@
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات </label>
-                <input asp-for="Description" class="form-control" placeholder="توضیحات پست">
+                <input required asp-for="Description" class="form-control" placeholder="توضیحات پست">
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
         </div>
