--- a/GhasreMobile/Areas/Admin/Views/Delivery/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Delivery/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.Models.TblDelivery>
 @{
-    ViewData["Title"] = "ارائه خدمات";
+    ViewData["Title"] = "ارائه خدمات درب منزل";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 <div class="row flex-div">
