--- a/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/OnlineOrder/Index.cshtml
@@ -66,7 +66,7 @@
                                     </td>
                                     <td>
                                         <span class="mr-2" data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات">
-                                            <a onclick="Info(@item.ClientId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
+                                            <a onclick="Info(@item.OnlineOrderId)" data-toggle="modal" data-target="#modalSave" class="text-primary" uk-icon="information-circle-outline"></a>
                                         </span>
                                     </td>
                                 </tr>
