--- a/GhasreMobile/Areas/Admin/Views/PostOption/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/PostOption/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<DataLayer.Models.TblPostOption>
 @{
-    ViewData["Title"] = "گزینه های پست";
+    ViewData["Title"] = "روش های ارسال";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
