--- a/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Components/Edit.cshtml
@@ -24,7 +24,7 @@
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات </label>
-                <input asp-for="Description" class="form-control" placeholder="توضیحات پست">
+                <input required asp-for="Description" class="form-control" placeholder="توضیحات پست">
             </div>
         </div>
         <label class="mt-2">تصویر پست</label>
@@ -49,7 +49,7 @@
 
         <label>متن پست </label>
         <div>
-            <textarea asp-for="BodyHtml" id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
+            <textarea required asp-for="BodyHtml" id="DescriptionLongHtml" class="textarea-fix-height-300"></textarea>
         </div>
     </div>
     <div class="modal-footer justify-content-end">
