--- a/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Blog/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<DataLayer.Models.TblBlog>
 @using GhasreMobile.Utilities;
 @{
-    ViewData["Title"] = "پست ها";
+    ViewData["Title"] = "اخبار و اطلاعیه ها";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
