--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -75,7 +75,7 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label>قیمت</label>
-                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 ريال">
+                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 ">
                         <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
@@ -112,33 +112,6 @@
                     </div>
                     <span class="text-danger" asp-validation-for="TblProductKeywordRel"></span>
                 </div>
-                <hr />
-
-                <label class="uk-text-bold">افزودن رنگ :</label>
-                <div class="form-row">
-                    <div class="form-group col-md-3">
-                        <label>انتخاب رنگ</label>
-                        <input id="InputColor" type="color" class="form-control form-control-sm" />
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label>نام رنگ</label>
-                        <input id="InputColorName" type="text" maxlength="50" placeholder="مثال : آبی" class="form-control form-control-sm" />
-                    </div>
-                    <div class="form-group col-md-3">
-                        <label>تعداد</label>
-                        <input id="InputColorCount" type="number" placeholder="مثال : 2" class="form-control form-control-sm" />
-                    </div>
-                    <div class="form-group col-md-2 mt-md-4 pt-2 text-white">
-                        <a id="SubmitColor" class="btn btn-info btn-sm">افزودن</a>
-                    </div>
-                    <span id="TblColor" asp-validation-for="TblColor" class="text-danger"></span>
-                </div>
-                <aside id="ColorPanel">
-                    @foreach (var item in Model.TblColor)
-                    {
-                        <div onclick='RemoveColorPat(this)' class='form-row'><label class='mr-2'>رنگ : @item.Name</label><div class="uk-border-rounded mr-2 color-box" style="background:@item.ColorCode;"></div><label class='mr-2'>@item.Count عدد</label><input type="hidden" name="Colors" value="@item.ColorCode" /><input type="hidden" name="ColorsCounts" value="@item.Count" /><input type="hidden" name="ColorName" value="@item.Name" /><span class='text-danger'>&nbsp;(x)</span></div>
-                    }
-                </aside>
                 <hr />
                 <div class="form-row mt-3">
                     <div class="form-group col-md-5">
