--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Create.cshtml
@@ -29,7 +29,7 @@
         <label class="mt-2">تصویر اصلی</label>
         <br />
         <div class="custom-file col-md-7">
-            <input asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
+            <input required asp-for="MainImage" type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" onchange="inputChanged(this)">
             <label class="custom-file-label" for="Image" data-browse="انتخاب" id="FileName">انتخاب تصویر</label>
         </div>
         <span class="text-danger" asp-validation-for="MainImage"></span>
@@ -37,7 +37,7 @@
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات</label>
-                <textarea asp-for="Body" class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
+                <textarea required asp-for="Body" class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
             </div>
             <span class="text-danger" asp-validation-for="Body"></span>
         </div>
