--- a/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Store/Components/Edit.cshtml
@@ -38,7 +38,7 @@
         <div class="form-row">
             <div class="form-group col-md-7">
                 <label>توضیحات</label>
-                <textarea asp-for="Body" class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
+                <textarea required asp-for="Body" class="textarea-fix-height-120" placeholder=" متن توضیحات... "></textarea>
             </div>
             <span class="text-danger" asp-validation-for="Body"></span>
         </div>
