--- a/GhasreMobile/Views/Forum/ForumView.cshtml
+++ b/GhasreMobile/Views/Forum/ForumView.cshtml
@@ -56,11 +56,11 @@
 
             @if (User.Identity.IsAuthenticated)
             {
-                <button class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ثبت نظر</button>
+                <button class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ارسال</button>
             }
             else
             {
-                <a href="/Login" class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ثبت نظر</a>
+                <a href="/Login" class="btn btn-dashed uk-margin-auto-top uk-margin-auto-left">ارسال</a>
             }
 
         </div>
