--- a/GhasreMobile/Areas/Admin/Views/PostOption/Components/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/PostOption/Components/Create.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group col-md-6">
                 <label>قیمت (تومان)</label>
-                <input asp-for="Price" class="form-control form-control-sm" placeholder="مثال: 20000">
+                <input asp-for="Price" class="form-control form-control-sm PriceInput" placeholder="مثال: 20000">
             </div>
         </div>
     </div>
@@ -32,3 +32,9 @@
 
 <script src="~/Validate/jquery.validate.min.js"></script>
 <script src="~/Validate/jquery.validate.unobtrusive.js"></script>
+<script src="~/AdminStaticFile/Input_Formatting_Currency.js"></script>
+<script>
+    $(".PriceInput").change(function () {
+        $(this).val($(this).val().replaceAll(",", ""));
+    });
+</script>
