--- a/GhasreMobile/wwwroot/css/pages/index.css
+++ b/GhasreMobile/wwwroot/css/pages/index.css
@@ -254,3 +254,12 @@ backdrop-filter: saturate(80%);
         object-fit: cover;
         -o-object-position: center;
         object-position: center; }
+
+.map-card {
+  height: 360px;
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+  -moz-border-radius: 4px 4px 4px 4px;
+  -webkit-border-radius: 4px 4px 4px 4px;
+  border-radius: 4px 4px 4px 4px; }
