--- a/GhasreMobile/Views/Product/Index.cshtml
+++ b/GhasreMobile/Views/Product/Index.cshtml
@@ -43,6 +43,12 @@
         </div>
         <div uk-slideshow="animation: slide; ratio:1:1">
             <div class="border">
+                @if (Model.IsFractional)
+                {
+                    <label class="fraction">
+                        فروش اقساطی
+                    </label>
+                }
                 <div class="slider">
                     <ul class="img uk-slideshow-items" uk-lightbox="animation: slide">
                         <li>
@@ -89,10 +95,10 @@
                         <button class="action" uk-tooltip="اشتراک گذاری" onclick="share(window.location.href)"
                                 uk-icon="share-social-outline"></button>
                         @*<label class="action" uk-tooltip="فعال کردن اعلان ها" uk-icon="notifications-outline">
-                                <input name="notifications"
-                                       onchange="notificationschanged(this)"
-                                       type="checkbox" />
-                            </label>*@
+                    <input name="notifications"
+                           onchange="notificationschanged(this)"
+                           type="checkbox" />
+                </label>*@
                     </div>
                 </div>
             </div>
@@ -109,13 +115,6 @@
     </div>
     <div class="pr-content col">
         <div class="body col">
-            @if (Model.IsFractional)
-            {
-                <label class="uk-alert uk-alert-success uk-margin-remove-bottom uk-margin-small-top uk-margin-auto-left uk-padding-small">
-                    فروش اقساطی
-                </label>
-            }
-
             @Html.Raw(Model.DescriptionShortHtml)
         </div>
         <div class="price">
