--- a/GhasreMobile/wwwroot/css/pages/product.css
+++ b/GhasreMobile/wwwroot/css/pages/product.css
@@ -90,7 +90,21 @@ backdrop-filter: saturate(80%);
       color: #96027E;
       border: 2px solid #96027E; }
     .pr-image .border {
-      border: solid 1px #e9e9e9; }
+      border: solid 1px #e9e9e9;
+      position: relative; }
+      .pr-image .border .fraction {
+        border: 1px solid rgba(150, 2, 126, 0.52);
+        -moz-border-radius: 4px 4px 4px 4px;
+        -webkit-border-radius: 4px 4px 4px 4px;
+        border-radius: 4px 4px 4px 4px;
+        color: #96027E;
+        padding: 3px 6px;
+        display: flex;
+        position: absolute;
+        font-size: 10px;
+        left: 8px;
+        top: 8px;
+        z-index: 50; }
       .pr-image .border .slider {
         margin: auto;
         width: 256px;
