--- a/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Create.cshtml
@@ -66,7 +66,8 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label>قیمت</label>
-                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm PriceInput" placeholder="مثال : 80,000 تومان">
+                        <input data-type='currency' class="form-control form-control-sm PriceInput" placeholder="مثال : 80,000 تومان">
+                        <input type="hidden" asp-for="PriceBeforeDiscount" />
                         <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
@@ -166,7 +167,7 @@
 
 @section Script{
     <script src="~/js/bootstrap-tagsinput.js"></script>
-    <script src="~/AdminStaticFile/Input_Formatting_Currency.js"></script>
+    <script src="~/js/Auto_Formatting_Currency.js"></script>
     <style>
         .dz-error-message {
             display: none !important;
@@ -223,11 +224,11 @@
             //$("#GalleryPanel").append("<div class='custom-file col-md-7 mt-3'><input type='file' class='custom-file-input form-control form-control-sm' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/><label class='custom-file-label'></label></div>");
             $("#GalleryPanel").append(
                 `<div class="custom-file col-md-7 mt-3">
-                                           <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
-                                           <label class="custom-file-label" data-browse="انتخاب">
-                                                انتخاب فایل
-                                           </label>
-                                         </div>`
+                                               <input type="file" class="custom-file-input form-control form-control-sm" accept="image/x-png,image/gif,image/jpeg" name="GalleryFile" onchange="inputChanged(this)"/>
+                                               <label class="custom-file-label" data-browse="انتخاب">
+                                                    انتخاب فایل
+                                               </label>
+                                             </div>`
             );
             //$("#GalleryPanel").append("<div><input type='file' accept='image/x-png,image/gif,image/jpeg' name='GalleryFile'/></div>");
         }
@@ -307,7 +308,12 @@
         }
 
         $(".PriceInput").change(function () {
-            $(this).val($(this).val().replaceAll(",", ""));
+            var price = $(this).val().replaceAll(",", "");
+            if ($.isNumeric(price)) {
+                $("#PriceBeforeDiscount").val($(this).val().replaceAll(",", ""));
+            } else {
+                $(this).val("");
+            }
         });
 
     </script>
