--- a/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Product/Edit.cshtml
@@ -75,7 +75,8 @@
                     </div>
                     <div class="form-group col-md-2">
                         <label>قیمت</label>
-                        <input asp-for="PriceBeforeDiscount" class="form-control form-control-sm" placeholder="مثال : 80000 ">
+                        <input value="@Model.PriceBeforeDiscount" class="form-control form-control-sm">
+                        <input asp-for="PriceBeforeDiscount" type="hidden" />
                         <span asp-validation-for="PriceBeforeDiscount" class="text-danger"></span>
                     </div>
                     <div class="form-group col-md-2">
