--- a/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
+++ b/GhasreMobile/Areas/User/Views/Order/OnlineOrder.cshtml
@@ -1,7 +1,7 @@
 ﻿@model OnlineOrderVm
 
 @{
-    ViewData["Title"] = "تایید خرید";
+    ViewData["Title"] = "سفارش آنلاین";
     Layout = "/Areas/User/Views/Shared/_Layout.cshtml";
     string OnlineOrder = ViewBag.OnlineOrder.ToString();
 }
