--- a/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ticket/Index.cshtml
@@ -51,30 +51,30 @@
                             }
                             @foreach (var items in Model.OrderByDescending(c => c.IsAnswer != true).GroupBy(c => c.ClientId))
                             {
-                                foreach (var item in items.TakeLast(1))
-                                {
-                                    <tr>
-                                        <td>#@item.TicketId</td>
-                                        <td>@item.Title</td>
-                                        <td>@item.Client.Name</td>
-                                        <td>@item.DateSubmited.Value.AllToShamsi()</td>
-                                        <td>
-                                            @if (item.IsAnswerd)
-                                            {
-                                                <span class="text-success">پاسخ داده شده</span>
-                                            }
-                                            else
-                                            {
-                                                <span class="text-warning">پاسخ داده نشده</span>
-                                            }
-                                        </td>
-                                        <td>
-                                            <span data-placement="top" data-toggle="tooltip" title="" data-original-title="محتویات تیکت">
-                                                <a href="/Admin/Ticket/InnerTicket/@item.ClientId" class="text-primary" uk-icon="information-circle-outline"></a>
-                                            </span>
-                                        </td>
-                                    </tr>
-                                }
+                                var item = items.First();
+
+                                <tr>
+                                    <td>#@item.TicketId</td>
+                                    <td>@item.Title</td>
+                                    <td>@item.Client.Name</td>
+                                    <td>@item.DateSubmited.Value.AllToShamsi()</td>
+                                    <td>
+                                        @if (item.IsAnswerd)
+                                        {
+                                            <span class="text-success">پاسخ داده شده</span>
+                                        }
+                                        else
+                                        {
+                                            <span class="text-warning">پاسخ داده نشده</span>
+                                        }
+                                    </td>
+                                    <td>
+                                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="محتویات تیکت">
+                                            <a href="/Admin/Ticket/InnerTicket/@item.ClientId" class="text-primary" uk-icon="information-circle-outline"></a>
+                                        </span>
+                                    </td>
+                                </tr>
+
                             }
                         </tbody>
                     </table>
