--- a/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
+++ b/GhasreMobile/Areas/User/Views/Wallet/Charge.cshtml
@@ -14,7 +14,8 @@
     <form asp-action="ChargeWallet" asp-controller="Wallet" asp-area="User">
         <div class="fg-col" dir="rtl">
             <label class="fg-label">مبلغ شارژ <span class="text-3">(ريال)</span></label>
-            <input type="number" class="entry" asp-for="Amount" />
+            <input type="text" class="entry PriceInput" data-type='currency' />
+            <input type="hidden" class="entry"  asp-for="Amount"/>
             <span class="text-danger" asp-validation-for="Amount"></span>
         </div>
         <div class="uk-margin-medium-top">
@@ -22,3 +23,15 @@
         </div>
     </form>
 </div>
+
+
+@section Scripts{
+
+<script src="~/js/Auto_Formatting_Currency.js"></script>
+    <script>
+        $('.PriceInput').change(function () {
+            var price = $(this).val().replaceAll(',', "");
+            $('#Amount').val(price);
+        })
+    </script>
+}
