--- a/GhasreMobile/Areas/Admin/Views/Ticket/InnerTicket.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Ticket/InnerTicket.cshtml
@@ -14,9 +14,7 @@
                     <div class="form-group mb-0">
                         <label>کد آخرین تیکت:</label>
                         <span>@Model.Last().TicketId</span>
-                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات تیکت">
-                            <a onclick="Information(@Model.Last().TicketId)" data-toggle="modal" data-target="#modalSave" class="mr-md-1 text-primary" uk-icon="information-circle"></a>
-                        </span>
+                        <span data-placement="top" data-toggle="tooltip" title="" data-original-title="جزئیات تیکت">                        </span>
                     </div>
                     <a href="/Admin/Ticket" class="btn btn-primary btn-sm text-white float-left uk-margin-auto-right uk-margin-auto-top uk-margin-auto-bottom ml-md-4">بازگشت</a>
                 </div>
