--- a/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -403,6 +403,14 @@
                                 </ul>
                             </li>
                             <li class="nav-item active">
+                                <a href="/Admin/Client" class="LoadingDiv">
+                                    <span class="icon-holder">
+                                        <i uk-icon="people"></i>
+                                    </span>
+                                    <span class="title">کاربران</span>
+                                </a>
+                            </li>
+                            <li class="nav-item active">
                                 <a href="/Admin/Comment" class="LoadingDiv">
                                     <span class="icon-holder">
                                         <i uk-icon="chatbubble-ellipses"></i>
