--- a/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
+++ b/GhasreMobile/Views/Shared/_ExpressProductBlock.cshtml
@@ -58,7 +58,7 @@
         {
             <span class="price">
                 <span class="t">ريال</span>
-                <span>@Model.Product.PriceAfterDiscount.Value.ToString("#,0")</span>
+                <span>@Model.Product.PriceBeforeDiscount.Value.ToString("#,0")</span>
             </span>
         }
         else
