--- a/GhasreMobile/Views/Gallery/_AlbumBlock.cshtml
+++ b/GhasreMobile/Views/Gallery/_AlbumBlock.cshtml
@@ -1,16 +1,19 @@
 ﻿@model TblAlbum
-<div class="albumBlock mat col uk-overflow-hidden">
-    <div uk-lightbox>
-        <a href="~/Images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" data-caption="@Model.Name">
-            <img src="~/Images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" alt="" />
-        </a>
-        @foreach (var item in Model.TblImage)
-        {
-            <a href="~/Images/ProductAlbum/@item.Image" data-caption="@Model.Name"></a>
-        }
+@if (Model != null && Model.TblImage.Count > 0)
+{
+    <div class="albumBlock mat col uk-overflow-hidden">
+        <div uk-lightbox>
+            <a href="~/Images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" data-caption="@Model.Name">
+                <img src="~/Images/ProductAlbum/@Model.TblImage.FirstOrDefault().Image" alt="" />
+            </a>
+            @foreach (var item in Model.TblImage)
+            {
+                <a href="~/Images/ProductAlbum/@item.Image" data-caption="@Model.Name"></a>
+            }
+        </div>
+        <div class="mat-pad col">
+            <h2 class="uk-h5"><a href="/AlbumView/@Model.AlbumId/@Model.Name" class="link-text">@Model.Name</a></h2>
+            @*<label class="uk-h6 text-3 uk-margin-small-top">4 شنبه 20 آبان</label>*@
+        </div>
     </div>
-    <div class="mat-pad col">
-        <h2 class="uk-h5"><a href="/AlbumView/@Model.AlbumId/@Model.Name" class="link-text">@Model.Name</a></h2>
-        @*<label class="uk-h6 text-3 uk-margin-small-top">4 شنبه 20 آبان</label>*@
-    </div>
-</div>
+}
