--- a/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
+++ b/GhasreMobile/Areas/Admin/Views/Config/Index.cshtml
@@ -16,26 +16,26 @@
                       data-ajax-mode="replace"
                       data-ajax-complete="EndCatagoryCreate()"
                       data-ajax-update="#ajaxresult">
-                    <div class="form-group col-lg-12">
+                    @*<div class="form-group col-lg-12">
                         <label>هزینه ارسال با پست: </label>
                         <input asp-for="HazineErsalBaPost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
                         <br /><span class="text-danger" asp-validation-for="HazineErsalBaPost"></span>
-                    </div>
+                    </div>*@
                     <div class="form-group col-lg-12">
                         <label>سقف هزینه ارسال رایگان: </label>
                         <input asp-for="SagfePost" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 19,000">
                         <br /><span class="text-danger" asp-validation-for="SagfePost"></span>
                     </div>
-                    <div class="form-group col-lg-12 mt-lg-3">
+                    @*<div class="form-group col-lg-12 mt-lg-3">
                         <label>هزینه ارسال با تیپاکس و چاپار</label>
                         <input asp-for="HazineErsalBaTipaxChapare" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
                         <br /><span class="text-danger" asp-validation-for="HazineErsalBaTipaxChapare"></span>
-                    </div>
-                    <div class="form-group col-lg-12 mt-lg-3">
+                    </div>*@
+                    @*<div class="form-group col-lg-12 mt-lg-3">
                         <label>هزینه ارسال با پست:</label>
                         <input asp-for="HazineErsalPeyk" class="form-control form-control-sm d-inline-block d-sm-block col-lg-10 float-left" placeholder="مثال: 28,000">
                         <br /><span class="text-danger" asp-validation-for="HazineErsalPeyk"></span>
-                    </div>
+                    </div>*@
                     <div class="form-group col-lg-12 mt-lg-3">
                         <label>تماس با ما:</label>
                         <textarea asp-for="TamasBaMa" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
@@ -50,11 +50,6 @@
                         <label>درباره ما:</label>
                         <textarea asp-for="DarbareyeMa" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="..."></textarea>
                         <br /><span class="text-danger" asp-validation-for="DarbareyeMa"></span>
-                    </div>
-                    <div class="form-group col-lg-12 mt-lg-3">
-                        <label>درباره ما کوتاه در فوتر سایت:</label>
-                        <input asp-for="ShortDarbareyeMa" class="form-control form-control-sm d-inline-block d-sm-block col-lg-12" placeholder="...">
-                        <br /><span class="text-danger" asp-validation-for="ShortDarbareyeMa"></span>
                     </div>
                     <div class="form-group col-lg-12 mt-lg-3">
                         <label>درباره ما کوتاه در فوتر سایت:</label>
