--- a/GhasreMobile/Views/ShopCart/Index.cshtml
+++ b/GhasreMobile/Views/ShopCart/Index.cshtml
@@ -13,7 +13,7 @@
 }
 else
 {
-    <script>
-        window.location.href = "/";
-    </script>
+    <div class="mat-card details">
+        سبد خرید شما خالیست
+    </div>
 }
