--- a/GhasreMobile/Views/Account/Register.cshtml
+++ b/GhasreMobile/Views/Account/Register.cshtml
@@ -18,7 +18,7 @@
     </h3>
     <div class="fg-col">
         <label class="fg-label">نام </label>
-        <input class="entry" type="tel" asp-for="Name" placeholder="...." />
+        <input class="entry" type="text" asp-for="Name" placeholder="...." />
         <span class="text-danger" asp-validation-for="Name"></span>
     </div>
     <div class="fg-col">
