--- a/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
+++ b/GhasreMobile/Views/Shared/Components/ProductView/ProductView.cshtml
@@ -1,29 +1,28 @@
 ﻿@model IEnumerable<TblBrand>
-@foreach (var item in Model)
+@if (Model.Any())
 {
-    @if (item.TblProduct.Any())
+    @foreach (var item in Model)
     {
-        <div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
-            <div class="title">
-                <a href="#" class="dot-container">
-                    <img src="~/st/v/dot.svg" alt="" class="dot" />
-                    <h3>@item.Name</h3>
-                </a>
+        @if (item.TblProduct.Any())
+        {
+            <div class="product-slider uk-position-relative uk-visible-toggle" tabindex="-1" uk-slider="">
+                <div class="title">
+                    <a href="#" class="dot-container">
+                        <img src="~/st/v/dot.svg" alt="" class="dot" />
+                        <h3>@item.Name</h3>
+                    </a>
+                </div>
+
+                <ul class="uk-slider-items">
+                    @foreach (var j in item.TblProduct)
+                    {
+                        <li>
+                            <partial name="_ProductBlock" model="j" />
+                        </li>
+                    }
+                </ul>
+                <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
             </div>
-
-            <ul class="uk-slider-items">
-                @foreach (var j in item.TblProduct)
-                {
-                    <li>
-                        <partial name="_ProductBlock" model="j" />
-                    </li>
-                }
-            </ul>
-
-            <ul class="navigation uk-slider-nav uk-dotnav uk-flex-center uk-margin"></ul>
-
-        </div>
-
-
+        }
     }
 }
